Use compaction dynamic config to enable compaction supervisors